# rat

./: pyproject.toml
src/rat/: __init__.py  __main__.py
src/rat/claude/: __init__.py  reader.py  watcher.py
src/rat/cli/: __init__.py
src/rat/cli/commands/: __init__.py  export.py  init.py  list.py  merge.py  new.py  pr.py  remove.py  shell.py  status.py  switch.py
src/rat/models/: __init__.py  session.py
src/rat/session/: __init__.py  tracker.py
src/rat/worktree/: __init__.py  manager.py
